--- a/CV_index.html
+++ b/CV_index.html
@@ -62,7 +62,7 @@
 				</div><!-- row -->
 			</div><!-- heading-wrapper -->
 			
-            <a class="downlad-btn" href="#">Download CV</a>
+            <a class="downlad-btn" href="Lydia_CV.docx">Download CV</a>
             <a class="downlad-btn" href="https://hit.ac.zw">HIT Website</a>
 		</div><!-- container -->
 	</header>
